--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.kafka.bootstrap-servers=localhost:9092
 server.port=6091
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+cloud.aws.region.auto=false
+cloud.aws.region.static=us-east-1
+cloud.aws.stack.auto=false
+aws.access.key=LKIAQAAAAAAAAMMO2FQI
+aws.secret.key=Soqu7h/4OpI/f5zVjte1E/D/WvisbDOC5LVXV+YB
+aws.service-endpoint=http://localhost:4566
